kubernetes/archived/apps/home-automation/zigbee2mqtt/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zigbee2mqtt
  namespace: home-automation
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: zigbee2mqtt
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # same-node ClusterIP replies miss CT reverse-xlate (socketLB
    # hostNamespaceOnly + endpointRoutes) and hit ingress policy
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
            app.kubernetes.io/name: mosquitto
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
            app.kubernetes.io/name: mosquitto
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
    # slzb coordinator on the LAN
    - toEntities: ["world"]
      toPorts:
        - ports:
            - port: "6638"
              protocol: TCP
